--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <title>LoginForm</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="LoginForm">
-    <h1>Sign Up</h1>
-    <div class="inputForm">
-      <input type="text" class="input" id="Firstname" placeholder="Firstname">
-    </div>
-    <div class="inputForm">
-      <input type="text" class="input" id="Lastname" placeholder="Lastname">
-    </div>
-    <div class="inputForm">
-      <input type="email" class="input" id="email" placeholder="email">
-    </div>
-    <div class="inputForm">
-      <input type="password" class="input" id="password" placeholder="password">
-    </div>
-    <div class="submitForm">
-      <button type="submit" class="submit">register</button>
-    </div>
-    <div class="checkboxArea">
-      <input type="checkbox" class="checkbox">
-      <a>Remember me</a>
+  <div class="container">
+    <div class="LoginForm">
+      <h1>Sign Up</h1>
+      <div class="inputForm">
+        <input type="text" class="input" id="Firstname" placeholder="Firstname">
+      </div>
+      <div class="inputForm">
+        <input type="text" class="input" id="Lastname" placeholder="Lastname">
+      </div>
+      <div class="inputForm">
+        <input type="email" class="input" id="email" placeholder="email">
+      </div>
+      <div class="inputForm">
+        <input type="password" class="input" id="password" placeholder="password">
+      </div>
+      <div class="submitForm">
+        <button type="submit" class="submit">register</button>
+      </div>
+      <div class="checkboxArea">
+        <input type="checkbox" class="checkbox">
+        <a>Remember me</a>
+      </div>
     </div>
   </div>
 </body>
