--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>LoginForm</title>
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
-    <div class="LoginForm">
+    <div class="LoginForm" id="formContainer">
       <h1>Sign Up</h1>
       <div class="inputForm">
         <input type="text" class="input" id="Firstname" placeholder="Firstname">
@@ -24,9 +25,8 @@
       <div class="submitForm">
         <button type="submit" class="submit">register</button>
       </div>
-      <div class="checkboxArea">
-        <input type="checkbox" class="checkbox">
-        <a>Remember me</a>
+      <div class="LoginLink">
+        <span>Have an Account?<a id="login"> Login</a></span>
       </div>
     </div>
   </div>
