Stored Vorname und Nachname erscheinen bei der neuen Seite

--- a/NewPage.html
+++ b/NewPage.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>NewPage</title>
+  <script src="script.js" defer></script>
 </head>
-<body>
-
+<body onload="loadNewPage()">
+<div id="newPage"></div>
 </body>
 </html>
